fix: fix subtitle alignment

--- a/ui-components/src/headers/PageHeader.scss
+++ b/ui-components/src/headers/PageHeader.scss
@@ -53,6 +53,5 @@
 }
 
 .page-header__lead {
-  margin: auto;
   max-width: var(--bloom-width-5xl);
 }
